//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class WorkshopGuestCar
    {
        public System.Guid RowId { get; set; }
        public System.Guid WorkshopId { get; set; }
        public System.Guid ServiceClientId { get; set; }
        public System.Guid CarId { get; set; }
        public Nullable<System.Guid> RepairHistoryId { get; set; }
        public string Vin { get; set; }
        public string PlateNumber { get; set; }
        public string BrandModelText { get; set; }
        public Nullable<int> Year { get; set; }
        public string Color { get; set; }
        public Nullable<int> Mileage { get; set; }
        public bool IsLinkedToUser { get; set; }
        public Nullable<System.Guid> UserCarId { get; set; }
        public System.DateTime CreatedAt { get; set; }
    
        public virtual Car Car { get; set; }
        public virtual WorkshopServiceClient WorkshopServiceClient { get; set; }
        public virtual Workshop Workshop { get; set; }
    }
}
