//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DriveCareCore.Data.BD
{
    using System;
    using System.Collections.Generic;
    
    public partial class WorkshopOnlineBooking
    {
        public System.Guid RowId { get; set; }
        public System.Guid WorkshopId { get; set; }
        public System.Guid UserId { get; set; }
        public Nullable<System.Guid> UserCarId { get; set; }
        public string ClientPhone { get; set; }
        public string ClientComment { get; set; }
        public Nullable<System.DateTime> PreferredDate { get; set; }
        public byte Status { get; set; }
        public System.DateTime CreatedAt { get; set; }
        public Nullable<System.DateTime> ConfirmedAt { get; set; }
        public Nullable<System.Guid> ConfirmedByEmployeeId { get; set; }
        public string IssueCategory { get; set; }
        public string RejectReason { get; set; }
        public Nullable<System.DateTime> RejectedAt { get; set; }
        public Nullable<System.Guid> RejectedByEmployeeId { get; set; }
    
        public virtual Employee Employee { get; set; }
        public virtual User User { get; set; }
        public virtual Workshop Workshop { get; set; }
    }
}
