@startuml ER_Part07_Clients_Chat_Booking
title Часть 7. Клиенты мастерской, чат и онлайн-запись
hide circle
skinparam linetype ortho
skinparam shadowing false
top to bottom direction

entity "Workshops" {
  RowId *
  Name
  CompanyId
  AddressId
  Description
  BusinessTypeId
}

entity "Users" {
  RowId *
  Login
  Password
  Description
  Email
  BirthDate
  Phone
  CreatedAt
}

entity "Employees" {
  RowId *
  FirstName
  LastName
  MidName
  Login
  Password
  Email
  Phone
  BirthDate
  HireDate
  IsActive
  Description
  WorkshopId
}

entity "WorkshopServiceClients" {
  RowId *
  WorkshopId
  UserId
  FullName
  Phone
  Email
  IsRegisteredUser
  CreatedAt
}

entity "WorkshopGuestCars" {
  RowId *
  WorkshopId
  ServiceClientId
  CarId
  RepairHistoryId
  Vin
  PlateNumber
  BrandModelText
  Year
  Color
  Mileage
  IsLinkedToUser
  UserCarId
  CreatedAt
}

entity "Cars" {
  RowId *
  ModelId
  CarTypeId
  FuelTypeId
  Year
  Description
  Vin
  PlateNumber
}

entity "RepairHistory" {
  RowId *
  CarId
  EmployeeId
  Title
  Description
  RepairDate
  EndDate
  Mileage
  Cost
  StatusId
  CreatedAt
  CategoryId
}

entity "WorkshopConversations" {
  RowId *
  WorkshopId
  UserId
  WorkshopServiceClientId
  Subject
  LastMessageAt
  LastMessagePreview
  UnreadForUser
  UnreadForWorkshop
  CreatedAt
}

entity "WorkshopMessages" {
  RowId *
  ConversationId
  SenderKind
  SenderUserId
  SenderEmployeeId
  Body
  CreatedAt
}

entity "WorkshopOnlineBookings" {
  RowId *
  WorkshopId
  UserId
  UserCarId
  ClientPhone
  ClientComment
  PreferredDate
  Status
  CreatedAt
  ConfirmedAt
  ConfirmedByEmployeeId
  IssueCategory
  RejectReason
  RejectedAt
  RejectedByEmployeeId
}

entity "UserCars" {
  RowId *
  UserId
  CarId
  Description
}

Employees }o--|| Workshops : WorkshopId
WorkshopServiceClients }o--|| Workshops : WorkshopId
WorkshopGuestCars }o--|| Workshops : WorkshopId
WorkshopGuestCars }o--|| WorkshopServiceClients : ServiceClientId
WorkshopGuestCars }o--|| UserCars : UserCarId
WorkshopGuestCars }o--|| Cars : CarId
RepairHistory }o--|| Employees : EmployeeId
RepairHistory }o--|| Cars : CarId
WorkshopConversations }o--|| Workshops : WorkshopId
WorkshopConversations }o--|| Users : UserId
WorkshopConversations }o--|| WorkshopServiceClients : WorkshopServiceClientId
WorkshopMessages }o--|| Employees : SenderEmployeeId
WorkshopMessages }o--|| WorkshopConversations : ConversationId
WorkshopMessages }o--|| Users : SenderUserId
WorkshopOnlineBookings }o--|| Workshops : WorkshopId
WorkshopOnlineBookings }o--|| Employees : RejectedByEmployeeId
WorkshopOnlineBookings }o--|| Users : UserId
WorkshopOnlineBookings }o--|| UserCars : UserCarId
WorkshopOnlineBookings }o--|| Employees : ConfirmedByEmployeeId
UserCars }o--|| Cars : CarId
UserCars }o--|| Users : UserId
@enduml
